# Cpp20-Masterclass-Udemy-excercises

./: .gitignore
5.2Celsuis-to-Fahrenheit/: CMakeLists.txt  CelsiusToFahrenheit.hpp  celsius-to-fahrenheit  celsius-to-fahrenheit-ut  main.cpp  task-details  utest.cpp
Sec-5-task-3-Area-And-Volume-of-a-box/: CMakeLists.txt  box-calcs.hpp  main.cpp  task-description  utest.cpp
Section3_task1/: a.out  main.cpp
